RESOLVED FIXED220635
[Async scrolling] Slow-scrolling reasons should not propagate across frame boundaries
https://bugs.webkit.org/show_bug.cgi?id=220635
Summary [Async scrolling] Slow-scrolling reasons should not propagate across frame bo...
Simon Fraser (smfr)
Reported 2021-01-14 14:50:48 PST
[Async scrolling] Slow-scrolling reasons should not propagate across frame boundaries
Attachments
Patch (10.48 KB, patch)
2021-01-14 14:53 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2021-01-14 14:53:23 PST
EWS
Comment 2 2021-01-14 21:12:51 PST
Committed r271508: <https://trac.webkit.org/changeset/271508> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417658 [details].
Radar WebKit Bug Importer
Comment 3 2021-01-14 21:13:12 PST
Note You need to log in before you can comment on or make changes to this bug.